--- a/src/css/master.css
+++ b/src/css/master.css
@@ -3,7 +3,7 @@ body {
 }
 
 *:focus {
-    outline: none;
+  outline: none;
 }
 
 header {
@@ -86,13 +86,29 @@ header {
   }
 }
 
-.biography, .contact, .galleries, .gallery, .home, .legal,
-.photo, .pricing, .purchase, .techniques {
-    -webkit-animation: fadein 1.2s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 1.2s; /* Firefox < 16 */
-    -ms-animation: fadein 1.2s; /* Internet Explorer */
-    -o-animation: fadein 1.2s; /* Opera < 12.1 */
-    animation: fadein 1.2s;
+a:link, a:visited {
+  color: rgb(94, 94, 94);
+}
+
+a:hover, a:active {
+  color: black;
+}
+
+.biography,
+.contact,
+.galleries,
+.gallery,
+.home,
+.legal,
+.photo,
+.pricing,
+.purchase,
+.techniques {
+  -webkit-animation: fadein 1.2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1.2s; /* Firefox < 16 */
+  -ms-animation: fadein 1.2s; /* Internet Explorer */
+  -o-animation: fadein 1.2s; /* Opera < 12.1 */
+  animation: fadein 1.2s;
 }
 
 #navigation a {
@@ -118,53 +134,73 @@ header {
   transition: color 0.2s ease-in-out;
 }
 
-#navigation a:active { 
-    background-color: transparent !important; 
+#navigation a:active {
+  background-color: transparent !important;
 }
 
 #navigation a.active {
-    color: black;
-    text-decoration: underline;
+  color: black;
+  text-decoration: underline;
 }
 
 .home img {
-    width: 85%;
+  width: 85%;
 }
 
-#pricing table.pricing-table, .techniques table{
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
+#pricing table.pricing-table,
+.techniques table {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
 }
 
-#pricing table.pricing-table td, .techniques table td{
-    padding-left: 10px;
-    padding-right: 10px;
+#pricing table.pricing-table td,
+.techniques table td {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .gallery-container {
-    display: grid;
+  display: inline-grid;
+  grid-template-columns: [full-start] 1fr [content-start] 2fr [content-end] 1fr [full-end];
+  grid-row-gap: 50px;
 }
 
-form, fieldset {
-	border: none;
-	margin: 0;
-	padding: 0;
+.imagewell {
+  margin: auto;
+  width: auto;
 }
-form { margin-top: 30px }
-input { margin-bottom: 15px }
-input.button { padding: 0 20px }
-label { font-weight: bold }
-select { height: 16px }
+
+form,
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+form {
+  margin-top: 30px;
+}
+input {
+  margin-bottom: 15px;
+}
+input.button {
+  padding: 0 20px;
+}
+label {
+  font-weight: bold;
+}
+select {
+  height: 16px;
+}
 textarea {
-	height: 175px;
-	margin: 0 0 15px 0;
-	padding: 0;
-	width: 380px;
+  height: 175px;
+  margin: 0 0 15px 0;
+  padding: 0;
+  width: 380px;
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 35px;
   font-style: italic;
   font-weight: normal;
   letter-spacing: -1px;
@@ -173,18 +209,18 @@ h2 {
 }
 
 h3 {
-	clear: both;
-	font-size: 140%;
-    font-weight: bold;
-    text-align: justify;
+  clear: both;
+  font-size: 140%;
+  font-weight: bold;
+  text-align: justify;
 }
 
 h4 {
-    color: #666;
-	padding-left: 10px;
-	font-size: 125%;
-	font-style: italic;
-	font-weight: normal;
+  color: #666;
+  padding-left: 10px;
+  font-size: 125%;
+  font-style: italic;
+  font-weight: normal;
 }
 
 footer {
@@ -203,103 +239,167 @@ footer {
   width: 100%;
 }
 
-
-
-.biography p, .legal p, .techniques p, .pricing p, .techniques ul, .contact form, .contact p{
-    text-align: justify;
+.biography p,
+.legal p,
+.techniques p,
+.pricing p,
+.techniques ul,
+.contact form,
+.contact p {
+  text-align: justify;
 }
 
 .popup {
-    position:absolute;
-    top: 100px;
+  position: absolute;
+  top: 110px;
+  left: 50%;
 
-    margin-left:auto;
-    margin-right: auto;
+  /* -ms-transform: translateY(-50%);
+    transform: translateY(-50%); */
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 
-    padding: 30px;
-    width: 900px;
-    z-index: 1;
-    background-color: white;
-    filter: none !important;
+  padding: 30px;
+  width: 900px;
+  z-index: 1;
+  background-color: white;
+  filter: none !important;
 
-    -webkit-animation: fadein .7s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein .7s; /* Firefox < 16 */
-    -ms-animation: fadein .7s; /* Internet Explorer */
-    -o-animation: fadein .7s; /* Opera < 12.1 */
-    animation: fadein .7s;
+  -webkit-animation: fadein 0.7s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 0.7s; /* Firefox < 16 */
+  -ms-animation: fadein 0.7s; /* Internet Explorer */
+  -o-animation: fadein 0.7s; /* Opera < 12.1 */
+  animation: fadein 0.7s;
 
-    -webkit-box-shadow: 3px 3px 6px 0 rgba(90, 90, 90, 0.7);
-    box-shadow: 3px 3px 6px 0 rgba(90, 90, 90, 0.7);
+  -webkit-box-shadow: 3px 3px 6px 0 rgba(90, 90, 90, 0.7);
+  box-shadow: 3px 3px 6px 0 rgba(90, 90, 90, 0.7);
 }
 
 .close-button img {
   width: 40px;
   position: absolute;
   top: 20px;
-  right:20px;
+  right: 20px;
+
+  cursor: pointer;
 
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
   -moz-box-shadow: none !important;
-  
+
   filter: none !important;
 }
 
 .bg-blur {
   background: rgba(209, 209, 209, 0.712);
 
-  position:fixed;
-  width:100%;
-  height:100%;
-  top:0px;
-  left:0px;
-  z-index:0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
   -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
-  filter: blur(5px);  
+  filter: blur(5px);
   -webkit-backdrop-filter: blur(1px);
-  backdrop-filter: blur(1px);  
+  backdrop-filter: blur(1px);
 
-  -webkit-animation: fadein .7s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein .7s; /* Firefox < 16 */
-  -ms-animation: fadein .7s; /* Internet Explorer */
-  -o-animation: fadein .7s; /* Opera < 12.1 */
-  animation: fadein .7s;
+  cursor: default;
+
+  -webkit-animation: fadein 0.7s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 0.7s; /* Firefox < 16 */
+  -ms-animation: fadein 0.7s; /* Internet Explorer */
+  -o-animation: fadein 0.7s; /* Opera < 12.1 */
+  animation: fadein 0.7s;
+}
+
+.hidden .popup {
+    position: fixed;
 }
 
 
+div.gallery div.gallery-container div.imagewell div div.popup, .galleries a, .gallery a{
+  width: 700px;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 16px;
+}
+
+div.imagewell div div.popup a:link, div.imagewell div div.popup a:visited,
+div.imagewell div div.popup a:hover, div.imagewell div div.popup a:active,
+.galleries a, .gallery a {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
 /* These are copy and pasted from the old site */
 
-div.right, div.rightw, div.left, div.leftw {
-	font-size: 90%;
-	line-height: 16px;
-	margin: 0;
-	padding-bottom: 15px;
-    width: 170px;
-    text-align: justify;
+div.right,
+div.rightw,
+div.left,
+div.leftw {
+  font-size: 90%;
+  line-height: 16px;
+  margin: 0;
+  padding-bottom: 15px;
+  width: 170px;
+  text-align: justify;
 }
 
-div.right img{
-    margin-bottom: 5px;
+div.right img {
+  margin-bottom: 5px;
 }
 
-div.rightw, div.leftw { width: 225px }
-div.right, div.rightw { float: right; padding-left: 40px }
-div.left, div.leftw { float: left; padding-right: 40px }
-div.right img, div.rightw img, div.left img, div.leftw img {
-	display: block;
-	/* padding-bottom: 10px; */
+.hidden, .hidden a {
+  height: 0px;
+  width: 0px;
 }
-div.right img, div.rightw img { float: right }
-div.left img, div.leftw img { float: left }
+
+div.rightw,
+div.leftw {
+  width: 225px;
+}
+div.right,
+div.rightw {
+  float: right;
+  padding-left: 40px;
+}
+div.left,
+div.leftw {
+  float: left;
+  padding-right: 40px;
+}
+div.right img,
+div.rightw img,
+div.left img,
+div.leftw img {
+  display: block;
+  /* padding-bottom: 10px; */
+}
+div.right img,
+div.rightw img {
+  float: right;
+}
+div.left img,
+div.leftw img {
+  float: left;
+}
 
 hr {
-	clear: both;
-	margin: 35px auto;
+  clear: both;
+  margin: 35px auto;
 }
 
-sup, sub { font-size: 75%; line-height: 33% }
-.spacer { clear: both }
+sup,
+sub {
+  font-size: 75%;
+  line-height: 33%;
+}
+.spacer {
+  clear: both;
+}
