--- a/src/css/master.css
+++ b/src/css/master.css
@@ -112,16 +112,17 @@ a:hover, a:active {
   animation: fadein 1.2s;
 }
 
+
 #navigation a {
   font: 12px;
   font-weight: bold;
   width: 100%;
   letter-spacing: 2px;
-  margin: 0 auto;
+  margin: auto;
   z-index: 100;
   left: 0;
   top: 0;
-  padding: 8px 13px;
+  padding: 8px 9px;
   line-height: 32px;
   text-decoration: none;
   outline: none;
@@ -351,9 +352,40 @@ footer {
   padding-top: 20px;
 }
 
-/* .techniques .popup {
+.techniques .popup {
+    position: unset;
+    top: unset;
+    left: unset;
+  
+    -ms-transform: unset;
+    transform: unset;
+  
+    padding: unset;
+    width: unset;
+    z-index: unset;
+    background-color: unset;
+    filter: unset !important;
 
-} */
+    height: 70%;
+    width: 90%;
+    bottom:0;
+    left:0;
+    margin:auto;
+    padding: 30px;
+    position:fixed;
+    right:0;
+    top:0;
+    -o-object-fit: contain;
+    object-fit: contain;
+    z-index: 1;
+    background-color: white;
+
+    overflow: scroll;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap:20px;
+  }
 
 .close-button img {
   width: 30px;
@@ -417,7 +449,82 @@ div.imagewell div div.popup h2 {
 
 /* These are copy and pasted from the old site */
 
+
 div.right,
+div.left {
+  width: 225px;
+}
+
+div.leftw,
+div.rightw {
+  height: 225px;
+  width: 100%;
+}
+
+div.right,
+div.rightw,
+div.left,
+div.leftw {
+  margin: auto;
+  grid-column: 3;
+}
+
+#img-1 {
+  grid-row: 1;
+}
+
+#img-2 {
+  grid-row: 2;
+}
+
+div.technique-0 {
+  grid-column: 1/4;
+}
+
+div.technique-1 {
+  grid-column: 1/3;
+  grid-row: 1;
+}
+
+div.technique-2 {
+  grid-column: 1/3;
+  grid-row: 2;
+}
+
+div.technique-3 {
+  grid-column: 1/3;
+  grid-row: 3;
+}
+
+div.technique-4 {
+  grid-column: 1/4;
+  grid-row: 4;
+}
+
+div.technique-5 {
+  grid-column: 1/3;
+  grid-row: 4;
+}
+
+div.technique-6 {
+  grid-column: 1/3;
+  grid-row: 5;
+}
+
+div.assembly-1 {
+  grid-column: 1;
+  grid-row: 5;
+}
+div.assembly-2 {
+  grid-column: 2;
+  grid-row: 5;
+}
+div.assembly-3 {
+  grid-column: 3;
+  grid-row: 5;
+}
+
+/* div.right,
 div.rightw,
 div.left,
 div.leftw {
@@ -433,32 +540,27 @@ div.right img {
   margin-bottom: 5px;
 }
 
-/* .hidden, .hidden a {
-  height: 0px;
-  width: 0px;
-} */
 
-div.rightw,
+*/
+/* 
+div.left,
 div.leftw {
-  width: 225px;
+  float: left;
+  padding-right: 40px;
 }
 div.right,
 div.rightw {
   float: right;
   padding-left: 40px;
 }
-div.left,
-div.leftw {
-  float: left;
-  padding-right: 40px;
-}
 div.right img,
 div.rightw img,
 div.left img,
 div.leftw img {
-  display: block;
-  /* padding-bottom: 10px; */
-}
+
+  width: 225px;
+} */
+/*
 div.right img,
 div.rightw img {
   float: right;
@@ -466,9 +568,9 @@ div.rightw img {
 div.left img,
 div.leftw img {
   float: left;
-}
+} */
 
-hr {
+/* hr {
   clear: both;
   margin: 35px auto;
 }
@@ -480,7 +582,7 @@ sub {
 }
 .spacer {
   clear: both;
-}
+} */
 
 /* For Desktop */
 @media only screen and (min-width: 900px) and (min-height:1000px){
@@ -540,34 +642,31 @@ sub {
     padding-top:unset;
   }
 
-  /* .techniques .popup {
-    position: unset;
-    top: unset;
-    left: unset;
+  .techniques .popup {
+    height: unset;
+    bottom:unset;
+    margin:unset;
+    right:unset;
+    -o-object-fit: unset;
+    object-fit: unset;
+    position: absolute;
+    top: 110px;
+    left: 50%;
   
-    -ms-transform: unset;
-    transform: unset;
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
   
-    padding: unset;
-    width: unset;
-    z-index: unset;
-    background-color: unset;
-    filter: unset !important;
-
-    height: 90%;
-    width: 90%;
-    bottom:0;
-    left:0;
-    margin:auto;
     padding: 30px;
-    position:fixed;
-    right:0;
-    top:0;
-    -o-object-fit: contain;
-    object-fit: contain;
+    width: 900px;
     z-index: 1;
     background-color: white;
-  } */
+    filter: none !important;
+  
+    -webkit-box-shadow: 3px 3px 6px 0 rgba(90, 90, 90, 0.7);
+    box-shadow: 3px 3px 6px 0 rgba(90, 90, 90, 0.7);
+
+    overflow: unset;
+  }
 
   .close-button img {
     width: 30px;
