--- a/src/css/master.css
+++ b/src/css/master.css
@@ -248,11 +248,23 @@ input {
   border-radius: 3px;
   transition: all .2s ease-in-out;
   margin:5px;
+  width: auto;
 }
 
-.submit-button:hover, #addToCart:hover, #goToCart:hover, #checkout:hover, #emptyCart:hover{
+select {
+  text-align: center;
+  border: none;
+  background-color: rgb(238, 238, 238);
+  border-radius: 3px;
+  transition: all .2s ease-in-out;
+  margin: 2px;
+  width: auto;
+}
+
+.submit-button:hover, #addToCart:hover, #goToCart:hover, #checkout:hover, #emptyCart:hover, select:hover{
   background-color: rgb(211, 211, 211);
   border-radius: 3px;
+  cursor: pointer;
 }
 
 input.button {
@@ -263,9 +275,9 @@ label {
   font-weight: bold;
 }
 
-select {
+/* select {
   height: 16px;
-}
+} */
 
 textarea {
   height: 175px;
@@ -447,8 +459,18 @@ div.imagewell div div.popup h2 {
   margin-top: 0px;
 }
 
+select {
+  
+}
+
 /* These are copy and pasted from the old site */
 
+.even {
+  background-color: rgb(226, 226, 226);
+}
+.odd {
+  background-color: rgb(245, 245, 245);
+}
 
 div.right,
 div.left {
@@ -515,10 +537,12 @@ div.assembly-1 {
   grid-column: 1;
   grid-row: 5;
 }
+
 div.assembly-2 {
   grid-column: 2;
   grid-row: 5;
 }
+
 div.assembly-3 {
   grid-column: 3;
   grid-row: 5;
